--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -28,22 +28,21 @@
         </div>
       </div>
       <div class="row">
+      </div>
+      <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part my Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document the weekly challenges that I have been given in a critical way, explain how I think that I’ve accomplished the task and evaluate what I’ve learned in the process. This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. </p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part my Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document the weekly challenges that I have been given in a critical way, explain how I think that I’ve accomplished the task and evaluate what I’ve learned in the process. This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. Below is a diagram that I created of the blog structure which highlights each module and how each post will be laid out in an agile project methodology format as this is how the course is managed. Below the diagram is a contents page that will take you to the specified course module.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
+          </div>
+          <div class="col-md-12 pt-2">
+            <h5 class="text-center bg-dark p-2">Blog Structure</h5>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Contents Page</b></h3>
-        </div>
+      <div class="row px-2">
+        <div class="col-md-12 bg-light" style=""><img class="d-block mx-auto img-fluid" src="https://i.ibb.co/sCxvz5c/CRJ-Diagram.png" style=""></div>
       </div>
     </div>
   </div>
@@ -51,9 +50,11 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Under Construction!</b></h3>
-          <p class="text-left p-2 bg-primary">Under Construction for my MA.</p>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="text-center">Contents Page</b></h3>
         </div>
+      </div>
+      <div class="row pb-2">
+        <div class="col-md-12"><a class="btn btn-block btn-info" href="CRJ-GDO710.html">GDO710 Development Practice</a><a class="btn btn-block btn-info" href="CRJ-IGO720.html">IGO720 Game Development</a><a class="btn btn-block btn-info" href="CRJ-GDO730.html">GDO730 Co-Creative Design &amp;&nbsp;<br>Development Practice</a><a class="btn btn-block btn-info" href="CRJ-IGO740.html">IGO740 Indie Game Start-Up</a><a class="btn btn-block btn-info" href="CRJ-GDO750.html">GDO750 Major Project</a></div>
       </div>
     </div>
   </div>
