--- a/ConnorOrton/MA/CRJ-IGO740.html
+++ b/ConnorOrton/MA/CRJ-IGO740.html
@@ -23,13 +23,13 @@
     <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12 pt-2" style="">
-          <h3 class="text-center bg-dark p-2">Critical Reflective Journal</h3>
+          <h3 class="text-center bg-dark p-2">IGO740 Indie Game Start-Up</h3>
           <h5 class="text-center bg-dark p-2">Introduction</h5>
         </div>
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the first page of my critical reflective journal, written by Connor Orton as part my Indie Games Development master’s degree. My journal will document the progress of my practical work, contextual research and discuss my games development practices as I progress throughout my course. I will document the weekly challenges that I have been given in a critical way, explain how I think that I’ve accomplished the task and evaluate what I’ve learned in the process. This blog is designed for educational purposes, and any outsource material will be referenced correctly to the original source, author or creator at the bottom of each post. </p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the critical reflective journal page for module IGO740 Indie Game Start-Up. This page will be updated in September 2022. </p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -51,8 +51,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Under Construction!</b></h3>
-          <p class="text-left p-2 bg-primary">Under Construction for my MA.</p>
+          <h3 class="text-center bg-secondary p-2" style="">TBD.</h3>
+          <p class="text-left p-2 bg-primary">This page will be updated in September 2022. </p>
         </div>
       </div>
     </div>
