--- a/ConnorOrton/MA/CRJ-GDO730.html
+++ b/ConnorOrton/MA/CRJ-GDO730.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <title>Fine Chap Games - Connor Orton</title>
-  <meta name="description" content="Welcome to the portfolio of Connor Orton">
+  <title>CRJ - GDO730</title>
+  <meta name="description" content="Critical reflective journal GDO730 page.">
   <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
   <link rel="stylesheet" href="wireframe.css">
   <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
