--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <title>Fine Chap Games - Connor Orton</title>
-  <meta name="description" content="Welcome to the portfolio of Connor Orton">
-  <meta name="keywords" content="Connor Orton Indie Game Development Portfolio">
+  <title>CRJ - Introduction</title>
+  <meta name="description" content="Critical reflective journal introduction page.">
+  <meta name="keywords" content="Connor Orton Indie Game Development Portfolio CRJ">
   <link rel="stylesheet" href="wireframe.css">
   <link rel="icon" href="assets/FineChapGames/Logo_ZoomedOut_NoBG.png">
   <link rel="stylesheet" href="../../wireframe.css">
@@ -50,7 +50,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="text-center">Contents Page</b></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="text-center">Contents</b></h3>
         </div>
       </div>
       <div class="row pb-2">
