--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">Welcome to the critical reflective journal page for module GDO710 Development Practice which started in September 2021.&nbsp;</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. This week is the first iteration of the first sprint and will focus on getting oriented onto the course by reviewing the course structure, understanding the first module in greater depth and reviewing how good academic practice can be developed.&nbsp;<br><br>The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured.&nbsp;<br>By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;&nbsp;</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -38,20 +38,235 @@
       </div>
     </div>
   </div>
-  <div class="">
+  <div class="pb-4">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
           <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Contents Page</b></h3>
         </div>
       </div>
+      <div class="row px-2 pb-2">
+        <div class="col-md-12 bg-primary py-2" style="">
+          <h3 class="text-center">Sprint 1</h3><a class="btn btn-block btn-info" href="#week1">Week 1 - Orientation</a><a class="btn btn-block btn-info" href="#week2">Week 2 - Creativity</a><a class="btn btn-block btn-info" href="#week3">Week 3 - Rapid Ideation</a>
+        </div>
+      </div>
+      <div class="row px-2 pb-2">
+        <div class="col-md-12 bg-primary py-2">
+          <h3 class="text-center">Sprint 2</h3><a class="btn btn-block btn-info" href="#week4">Week 4 - Time and Project Management</a><a class="btn btn-block btn-info" href="#week5">Week 5 - Reflection</a><a class="btn btn-block btn-info" href="#week6">Week 6 - Reading Week</a>
+        </div>
+      </div>
+      <div class="row px-2 pb-2">
+        <div class="col-md-12 bg-primary py-2">
+          <h3 class="text-center">Sprint 3</h3><a class="btn btn-block btn-info" href="#week7">Week 7 - Version Control</a><a class="btn btn-block btn-info" href="#week8">Week 8 - Research</a><a class="btn btn-block btn-info" href="#week9">Week 9 - Communities of Practice</a>
+        </div>
+      </div>
+      <div class="row px-2 pb-2">
+        <div class="col-md-12 bg-primary py-2">
+          <h3 class="text-center">Sprint 4</h3><a class="btn btn-block btn-info" href="#week10">Week 10 - Agile Practice</a><a class="btn btn-block btn-info" href="#week11">Week 11 - Real WORKS</a><a class="btn btn-block btn-info" href="#week12">Week 12 - Finale</a>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="pb-4" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+  <div class="mb-4" style="">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-12">
-          <p class="text-left p-2 bg-primary">Under Construction for my MA.</p>
+        <div class="col-md-12 pt-2" style="">
+          <h3 class="text-center bg-dark p-2">Sprint 1</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week1">Week 1 - Orientation</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" contenteditable="true" id="week2">Week 2 - Creativity</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week3">Week 3 - Rapid Ideation</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mb-4" style="">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12 pt-2" style="">
+          <h3 class="text-center bg-dark p-2">Sprint 2</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week4">Week 4 - Time and Project Management</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week5">Week 5 - Reflection</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week6">Week 6 - Reading Week</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mb-4" style="">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12 pt-2" style="">
+          <h3 class="text-center bg-dark p-2">Sprint 3</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week7">Week 7 - Version Control</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week8">Week 8 - Research</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week9">Week 9 - Communities of Practice</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mb-4" style="">
+    <div class="container pb-2" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12 pt-2" style="">
+          <h3 class="text-center bg-dark p-2">Sprint 4</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week10">Week 10 - Agile Practice</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week11">Week 11 - Real WORKS</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-12" style="">
+          <h5 class="text-center bg-dark p-2" id="week12">Week 12 - Finale</h5>
+        </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
         </div>
       </div>
     </div>
