--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -47,22 +47,22 @@
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2" style="">
-          <h3 class="text-center">Sprint 1</h3><a class="btn btn-block btn-info" href="#week1">Week 1 - Orientation</a><a class="btn btn-block btn-info" href="#week2">Week 2 - Creativity</a><a class="btn btn-block btn-info" href="#week3">Week 3 - Rapid Ideation</a>
+          <h3 class="text-center">Sprint 1</h3><a class="btn btn-block btn-dark" href="#week1">Week 1 - Orientation</a><a class="btn btn-block btn-dark" href="#week2">Week 2 - Creativity</a><a class="btn btn-block btn-dark" href="#week3">Week 3 - Rapid Ideation</a>
         </div>
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2">
-          <h3 class="text-center">Sprint 2</h3><a class="btn btn-block btn-info" href="#week4">Week 4 - Time and Project Management</a><a class="btn btn-block btn-info" href="#week5">Week 5 - Reflection</a><a class="btn btn-block btn-info" href="#week6">Week 6 - Reading Week</a>
+          <h3 class="text-center">Sprint 2</h3><a class="btn btn-block btn-dark" href="#week4">Week 4 - Time and Project Management</a><a class="btn btn-block btn-dark" href="#week5">Week 5 - Reflection</a><a class="btn btn-block btn-dark" href="#week6">Week 6 - Reading Week</a>
         </div>
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2">
-          <h3 class="text-center">Sprint 3</h3><a class="btn btn-block btn-info" href="#week7">Week 7 - Version Control</a><a class="btn btn-block btn-info" href="#week8">Week 8 - Research</a><a class="btn btn-block btn-info" href="#week9">Week 9 - Communities of Practice</a>
+          <h3 class="text-center">Sprint 3</h3><a class="btn btn-block btn-dark" href="#week7">Week 7 - Version Control</a><a class="btn btn-block btn-dark" href="#week8">Week 8 - Research</a><a class="btn btn-block btn-dark" href="#week9">Week 9 - Communities of Practice</a>
         </div>
       </div>
       <div class="row px-2 pb-2">
         <div class="col-md-12 bg-primary py-2">
-          <h3 class="text-center">Sprint 4</h3><a class="btn btn-block btn-info" href="#week10">Week 10 - Agile Practice</a><a class="btn btn-block btn-info" href="#week11">Week 11 - Real WORKS</a><a class="btn btn-block btn-info" href="#week12">Week 12 - Finale</a>
+          <h3 class="text-center">Sprint 4</h3><a class="btn btn-block btn-dark" href="#week10">Week 10 - Agile Practice</a><a class="btn btn-block btn-dark" href="#week11">Week 11 - Real WORKS</a><a class="btn btn-block btn-dark" href="#week12">Week 12 - Finale</a>
         </div>
       </div>
     </div>
