--- a/ConnorOrton/MA/CRJ-Introduction.html
+++ b/ConnorOrton/MA/CRJ-Introduction.html
@@ -53,8 +53,8 @@
           <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto"><b class="text-center">Contents</b></h3>
         </div>
       </div>
-      <div class="row pb-2">
-        <div class="col-md-12"><a class="btn btn-block btn-info" href="CRJ-GDO710.html">GDO710 Development Practice</a><a class="btn btn-block btn-info" href="CRJ-IGO720.html">IGO720 Game Development</a><a class="btn btn-block btn-info" href="CRJ-GDO730.html">GDO730 Co-Creative Design &amp;&nbsp;<br>Development Practice</a><a class="btn btn-block btn-info" href="CRJ-IGO740.html">IGO740 Indie Game Start-Up</a><a class="btn btn-block btn-info" href="CRJ-GDO750.html">GDO750 Major Project</a></div>
+      <div class="row pb-2 px-2">
+        <div class="col-md-12 bg-primary py-2"><a class="btn btn-block btn-dark" href="CRJ-GDO710.html">GDO710 Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO720.html">IGO720 Game Development</a><a class="btn btn-block btn-dark" href="CRJ-GDO730.html">GDO730 Co-Creative Design &amp;&nbsp;<br>Development Practice</a><a class="btn btn-block btn-dark" href="CRJ-IGO740.html">IGO740 Indie Game Start-Up</a><a class="btn btn-block btn-dark" href="CRJ-GDO750.html">GDO750 Major Project</a></div>
       </div>
     </div>
   </div>
