--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. This week is the first iteration of the first sprint and will focus on getting oriented onto the course by reviewing the course structure, understanding the first module in greater depth and reviewing how good academic practice can be developed.&nbsp;<br><br>The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured.&nbsp;<br>By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;&nbsp;</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">This first module is GDO710 Development Practice which is based around practice and reflection where I will be graded by this critical reflective journal and a case study video at the end of the module. The posts I will write will document my prior and current notions of development practice and will show the research, reflection and deliberate practices I have endeavoured. By the end of this module I will have gained the confidence and clarity to state clearly my aspirations after graduating from the course, what skills I need to improve on in order to achieve these aspirations and what medium I need to create to evidence my skillset.&nbsp;</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -81,11 +81,39 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">TBD.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">This week is the first iteration of the first sprint and will focus on getting oriented onto the course by reviewing the course structure, understanding the first module in greater depth and reviewing how good academic practice can be developed. I have been advised on a reading list that will state all the books that may be useful going forward in this module.&nbsp;<br><br>In the post that introduces the course it advises that the success of high-level academic studies relies on the ability to manage time effectively. The course is structured using the Scrum project management style and is divided into sprints which contain the weekly study topics. I have used this style to structure my critical responsive journal in reflection of the course structure, this enables a clear layout of each week divided by sprints therefore making it easier to read, navigate through and it also prevents a feeling of being overwhelmed knowing I can do each week bit by bit.<br><br>I watched two videos on the Waterfall and Scrum Agile Framework methodologies. I have learned that waterfall is a linear based project management methodology which relies heavily on documentation and planning before development starts. Very little user feedback is collected until the end and the methodology relies on taking the risk that the project will be at acceptable standards in the end. Agile on the other hand is an iterative approach to project management which relies on user input and feedback which is collated and collaborated on in Sprints and regular meet ups with the team, this results in the end project being better in quality. Comparing the two methodologies - ref here<reference about="" agile="" vs="" waterfall=""><br><br>I understand that is always best that good academic practice is used when studying on a high-level academic course as failing to follow the rules of this practice will result in a misconduct review. Failing to reference outsourced work or quotes will result in one of these reviews and credit must be given to the author or artist. Plagiarism, the act of copying another individual’s work is also not tolerated and everything I create for this project will of my own original writing or design unless otherwise stated and referenced. Any references or quotes that I use for this CRJ will be listed at the bottom of the page or annotated under the image with their respective sources to avoid any negative academic practices using websites like CiteThisForMe to help with the referencing process.&nbsp;</reference>
+          </p>
+          <h3 class="text-center bg-secondary p-2 mx-2 mt-2">Challenge task</h3>
           <div class="row px-2">
           </div>
           <div class="row px-2">
           </div>
+        </div>
+        <div class="col-md-12">
+          <p class="text-left p-2 bg-primary mb-0">I was given a challenge task to create an avatar that represents myself using household objects. Below is the avatar I have created:</p><img class="img-fluid d-block w-50 mx-auto py-2" src="https://i.ibb.co/9pYW3Ft/Avatar.jpg">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-left p-2 bg-primary mb-0">Design: The black canvas background everything is on is a sketchbook. I use this sometimes to scribble some games development ideas/concepts such as user interface designs and animations etc like this one:</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12"><img class="img-fluid d-block w-50 mx-auto py-2" src="https://i.ibb.co/RhyFTXL/Sketch.jpg"></div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-left p-2 bg-primary mb-0" contenteditable="true">Gaming: I included my switch Joy Cons as the switch is currently my most played console right now. I love portable consoles, but I am a PC gamer mainly, having played World of Warcraft for the last 15 years among a mountain of other game titles. On switch I am currently playing The Great Ace Attorney Chronicles as I'm a fan of the Phoenix Wright game series.&nbsp;<br><br>Technology: The wires, cable ties, adapters and usb sticks all resemble the fact that I'm passionate about the latest technologies. The wireless earphones for the eyes are not to show I'm into music but because I wear earphones for listening to sounds in general and it's comfortable to not be attached to a wire sometimes, just one reason why I think it’s good to be up to date with tech.&nbsp;<br><br>Pets: I used one of my cat's (Lucifer) collar as my facial hair. I have 3 cats that I love to bits. They are Maizy, Rocket and Lucifer (pics to follow in order) I inherited Maizy and Rocket from my partner. I raised Lucifer as a kitten, so I'll always have that extra connection to him because of this.<br><br>From this challenge I have learned what objects are most important to me from my possessions and I have learned a greater understanding about myself. I did not consider that simple objects mean so much to me, but I’ve accepted it now. In future I will consider the additional items that I didn’t have the chance to use towards my avatar and consider if what they mean to me going forward into building a career.&nbsp;</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2 mt-2">References</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-left p-2 bg-primary mb-0">References</p>
         </div>
       </div>
       <div class="row pt-2">
@@ -93,16 +121,76 @@
           <h5 class="text-center bg-dark p-2" contenteditable="true" id="week2">Week 2 - Creativity</h5>
         </div>
       </div>
-      <div class="row">
+      <div class="row px-2">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary" style="">TBD.</p>
+          <p class="text-left p-2 bg-primary" style="">This week is centred around creativity and how it can be used in development practises. This week I will experiment with my creative approaches in a playful manner to understand the meaning of the word ‘creativity’ in a greater depth. I will solve problems using creative methods to improve upon my create skillset in the challenge scenario. I have been encouraged to approach the week more open minded and have been advised that even bad ideas can be useful when solving problems creatively.<br><br>During this week’s spark forum, I discussed the times when I have needed to channel my own creativity. One event where I have had to channel my creativity is when I’ve had to design various menu concepts for one of my personal projects, Blight of the Rose, a 2D horror side scroller that is in development by myself and my partner Natalie Smith, who is also a part of my personal indie games company and shares the IP with myself. One of these designs stood out the most and required more creativity for it to look right. Here are all 3 designs from concept to finish in a slideshow: </p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
+          </div>
+          <div class="carousel slide" data-ride="carousel" id="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-moon.svg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
         </div>
       </div>
-      <div class="row pt-2">
+      <div class="row pb-2">
+        <div class="col-md-12">
+          <h3 class="text-center py-2 bg-secondary">Interation 1 - First Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/ypnzkgq/User-Interface-State-11-Game-Navigation-Menu.jpg">
+          <h3 class="text-center bg-secondary my-2 py-2">Interation 2 - Second Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/b50n7cY/Navigation-Mock-Up.png">
+          <h3 class="text-center my-2 py-2 bg-secondary" contenteditable="true">Interation 3 - Final Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/M5Sg07g/Navigation-Final.jpg">
+        </div>
+      </div>
+      <div class="row px-2">
+        <div style="">
+          <p class="text-left bg-primary p-2 mb-2" style="">As you can see the concept has progressively gotten better the more that I iterated on the creativity. I learned that the more that you iterate on a creative piece the greater it will look in its final stages and I will be taking this method into future creative works to accomplish the best result. </p>
+          <div class="row px-2">
+          </div>
+          <div class="row px-2">
+          </div>
+          <div class="carousel slide" data-ride="carousel" id="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-moon.svg">
+                <div class="carousel-caption">
+                  <h5 class="m-0">Carousel</h5>
+                  <p>with controls</p>
+                </div>
+              </div>
+            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-12" style="">
           <h5 class="text-center bg-dark p-2" id="week3">Week 3 - Rapid Ideation</h5>
         </div>
