--- a/ConnorOrton/MA/CRJ-GDO710.html
+++ b/ConnorOrton/MA/CRJ-GDO710.html
@@ -154,9 +154,9 @@
       </div>
       <div class="row pb-2">
         <div class="col-md-12">
-          <h3 class="text-center py-2 bg-secondary">Interation 1 - First Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/ypnzkgq/User-Interface-State-11-Game-Navigation-Menu.jpg">
-          <h3 class="text-center bg-secondary my-2 py-2">Interation 2 - Second Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/b50n7cY/Navigation-Mock-Up.png">
-          <h3 class="text-center my-2 py-2 bg-secondary" contenteditable="true">Interation 3 - Final Concept</h3><img class="img-fluid d-block h-50 mx-auto" src="https://i.ibb.co/M5Sg07g/Navigation-Final.jpg">
+          <h3 class="text-center py-2 bg-secondary">Interation 1 - First Concept</h3><img class="img-fluid d-block mx-auto" src="https://i.ibb.co/ypnzkgq/User-Interface-State-11-Game-Navigation-Menu.jpg">
+          <h3 class="text-center bg-secondary my-2 py-2">Interation 2 - Second Concept</h3><img class="img-fluid d-block mx-auto" src="https://i.ibb.co/b50n7cY/Navigation-Mock-Up.png">
+          <h3 class="text-center my-2 py-2 bg-secondary" contenteditable="true">Interation 3 - Final Concept</h3><img class="img-fluid d-block mx-auto" src="https://i.ibb.co/M5Sg07g/Navigation-Final.jpg">
         </div>
       </div>
       <div class="row px-2">
